--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Sentirse_Bien_WebAppContext": "Server=(localdb)\\mssqllocaldb;Database=Sentirse_Bien_WebAppContext-8ce5cae5-1c0c-4022-aafd-440685b3dfa1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
