establecer conexión con la base de datos

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,4 +9,8 @@
   "ConnectionStrings": {
     "Sentirse_Bien_WebAppContext": "Server=(localdb)\\mssqllocaldb;Database=Sentirse_Bien_WebAppContext-8ce5cae5-1c0c-4022-aafd-440685b3dfa1;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+  {
+      "ConnectionStrings": {
+        "MySpaDatabase": "Server=tcp:sentirsebienserver.database.windows.net,1433;Initial Catalog=sentirsebiendb;Persist Security Info=False;User ID=federicobejarano_;Password=?Fidesexauditu2846;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+   }
 }
